--- a/src/app/pages/Products/components/NewProduct/newProduct.css
+++ b/src/app/pages/Products/components/NewProduct/newProduct.css
@@ -12,6 +12,12 @@
   margin-top: 1rem;
 }
 
+.productInput1 {
+  margin-top: 2rem;
+  text-align: center;
+  padding-bottom: 10%;
+}
+
 @media only screen and (max-width: 600px) {
   .title {
     font-size: 1rem;
