--- a/src/app/pages/Products/products.css
+++ b/src/app/pages/Products/products.css
@@ -7,6 +7,8 @@
   width: 100%;
   height: 70px;
   background: #f5f5f5;
+  border-bottom:1px solid rgb(226, 218, 218);
+  background-image: url("../../images/negro.jpg");
 }
 
 .productsPageContainer {
@@ -17,11 +19,12 @@
 
 .newProduct {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   width: 30%;
   overflow-y: auto;
   background: #ffffff;
-  border-right:1px solid rgb(219, 213, 213);
+  border-right:1px solid rgb(226, 218, 218);
+  
 }
 
 .productList {
@@ -33,4 +36,5 @@
 
 .footer {
   height: 70px;
+  background-image: url("/src/app/images/negro.jpg");
 }
